--- a/src/main/webapp/channel/channel_payment_staff_bill.xhtml
+++ b/src/main/webapp/channel/channel_payment_staff_bill.xhtml
@@ -9,23 +9,21 @@
     <h:body>
         <ui:composition template="/resources/template/template.xhtml">
             <ui:define name="content">
-
                 <h:panelGroup rendered="#{!channelStaffPaymentBillController.printPreview}" styleClass="alignTop" >
                     <p:panel header="Staff Payments" >
-                        <h:panelGrid columns="1" >
-
-                            <h:form  >
-                                <h:panelGrid columns="2" >
-                                    <h:panelGrid columns="2">
+                        <h:form>
+                            <div class="row">
+                                <div class="col-3">
+                                    <h:panelGrid columns="2" class="w-100">
                                         <p:outputLabel value="Speciality" />
-                                        <p:autoComplete style="min-width: 400px!important;" forceSelection="true" value="#{channelStaffPaymentBillController.speciality}" id="acSpeciality"
+                                        <p:autoComplete class="mx-2 mt-2 w-100" forceSelection="true" value="#{channelStaffPaymentBillController.speciality}" id="acSpeciality"
                                                         completeMethod="#{doctorSpecialityController.completeSpeciality}" var="mysp" itemLabel="#{mysp.name}" itemValue="#{mysp}"
                                                         >
                                             <f:ajax event="itemSelect" execute="acSpeciality" render="scStaff" />
                                         </p:autoComplete>
 
                                         <p:outputLabel value="Staff" />
-                                        <p:autoComplete minQueryLength="2"  style="width: 400px;"
+                                        <p:autoComplete minQueryLength="2"  class="mx-2 mt-2 w-100"
                                                         forceSelection="true" 
                                                         value="#{channelStaffPaymentBillController.currentStaff}" id="scStaff"
                                                         completeMethod="#{channelStaffPaymentBillController.completeStaff}" var="mys" 
@@ -34,37 +32,52 @@
                                             <p:ajax event="itemSelect" update="lstSelect" process="scStaff"  
                                                     listener="#{channelStaffPaymentBillController.fillSessions}"></p:ajax>
                                         </p:autoComplete>
+
+
                                         <p:outputLabel value="Consider Date" />
-                                        <p:selectBooleanCheckbox value="#{channelStaffPaymentBillController.considerDate}" >
+                                        <p:selectBooleanCheckbox class="mx-2 mt-2 mb-2" value="#{channelStaffPaymentBillController.considerDate}" >
                                             <p:ajax update="fDate tDate" process="@this" event="change" />
                                         </p:selectBooleanCheckbox>
+
+
                                         <p:outputLabel value="From Date" />
-                                        <p:calendar value="#{channelStaffPaymentBillController.fromDate}" id="fDate" styleClass="dateTimePicker"
-                                                    disabled="#{!channelStaffPaymentBillController.considerDate}" navigator="false" pattern="dd MMMM yyyy HH:mm:ss" />
+                                        <p:calendar class="m-2" value="#{channelStaffPaymentBillController.fromDate}" id="fDate"
+                                                    disabled="#{!channelStaffPaymentBillController.considerDate}" navigator="false" pattern="dd MMMM yyyy HH:mm:ss">
+                                        </p:calendar> 
+
+
                                         <p:outputLabel value="To Date" />
-                                        <p:calendar value="#{channelStaffPaymentBillController.toDate}" id="tDate" styleClass="dateTimePicker"
+                                        <p:calendar class="m-2" value="#{channelStaffPaymentBillController.toDate}" id="tDate"
                                                     disabled="#{!channelStaffPaymentBillController.considerDate}" navigator="false" pattern="dd MMMM yyyy HH:mm:ss" />
-                                        <p:outputLabel value="Session" />
-                                        <p:selectOneMenu  id="lstSelect" converter="sscon"  
-                                                          value="#{channelStaffPaymentBillController.selectedServiceSession}" style="min-width: 100%;" >
+
+
+
+
+                                        <p:outputLabel class=""  value="Session" />
+                                        <p:selectOneMenu class= "m-2" id="lstSelect" converter="sscon"  
+                                                         value="#{channelStaffPaymentBillController.selectedServiceSession}" >
                                             <f:selectItem itemLabel="Select"  ></f:selectItem>
                                             <f:selectItems  value="#{channelStaffPaymentBillController.serviceSessionList}" var="ses" 
                                                             itemValue="#{ses}" 
                                                             itemLabel="#{ses.name} - #{ses.dayString}" ></f:selectItems>
                                         </p:selectOneMenu>
-                                        <p:commandButton ajax="false" value="Process" action="#{channelStaffPaymentBillController.calculateDueFees}"/>
-                                        <p:commandButton ajax="false" value="Clear" action="#{channelStaffPaymentBillController.makenull()}"/>
+
+
+
+                                        <p:commandButton class="mb-2" ajax="false" value="Process" action="#{channelStaffPaymentBillController.calculateDueFees}"/>
+                                        <p:commandButton class="mb-2  mx-2" ajax="false" value="Clear" action="#{channelStaffPaymentBillController.makenull()}"/>
                                         <p:watermark value="Speciality" for="acSpeciality"/>
                                         <p:watermark value="Staff" for="scStaff"/>
                                     </h:panelGrid>
+                                </div>
 
+                            </div>
 
-
-                                </h:panelGrid>
-                            </h:form>
+                        </h:form>
+                        <h:panelGrid columns="1" >
 
                             <h:form  >
-                                <p:dataTable id="tblFee" value="#{channelStaffPaymentBillController.dueBillFees}" selection="#{channelStaffPaymentBillController.payingBillFees}" rowIndexVar="i" var="bf" rowKey="#{bf.id}" >
+                                <p:dataTable class="mb-2" id="tblFee" value="#{channelStaffPaymentBillController.dueBillFees}" selection="#{channelStaffPaymentBillController.payingBillFees}" rowIndexVar="i" var="bf" rowKey="#{bf.id}" >
 
                                     <f:ajax  event="rowSelectCheckbox" execute="tblFee" listener="#{channelStaffPaymentBillController.performCalculations()}"   
                                              render=":#{p:resolveFirstComponentWithId('lblDue',view).clientId} :#{p:resolveFirstComponentWithId('lblPay',view).clientId}"  />  
@@ -146,11 +159,8 @@
                                 </p:dataTable>
                             </h:form>
 
-
-
-
-                            <h:form  >
-                                <p:panel id="pTotals"  >
+                            <h:form >
+                                <p:panel class="mb-2" id="pTotals"  >
                                     <f:facet name="header" >
                                         <h:outputLabel value="Payment Details" />
                                     </f:facet>
@@ -165,10 +175,10 @@
                                         </h:outputLabel>  
                                     </h:panelGrid>
                                 </p:panel>
-                                <h:panelGroup >
-
+                                
+                                <h:panelGroup class="d-flex align-items-center" >
                                     <h:outputLabel value="Payment Method" ></h:outputLabel>
-                                    <p:selectOneMenu  id="cmbPay" style="width: 400px;" 
+                                    <p:selectOneMenu class="mx-2" id="cmbPay" style="width: 400px;" 
                                                       value="#{channelStaffPaymentBillController.paymentMethod}" >
                                         <!--<f:selectItem itemLabel="Please select a Payment method" />-->
                                         <f:selectItems value="#{enumController.paymentMethodsWithoutCredit}"/>
