--- a/src/main/webapp/admin/lims/report_template.xhtml
+++ b/src/main/webapp/admin/lims/report_template.xhtml
@@ -9,11 +9,7 @@
       xmlns:autocomplete="http://java.sun.com/jsf/composite/autocomplete">
 
     <h:body>
-        <ui:composition template="/lab/administration.xhtml">
-
-
-
-
+        <ui:composition template="/admin/lims/index.xhtml">
 
             <ui:define name="subcontent">
                 <h:panelGroup rendered="#{!webUserController.hasPrivilege('LabReportFormatEditing')}" >
