--- a/src/main/webapp/admin/lims/investigation_list.xhtml
+++ b/src/main/webapp/admin/lims/investigation_list.xhtml
@@ -53,20 +53,25 @@
                             </f:facet>
                             <h:outputText value="#{item.fullName}"/>
                         </p:column>
-                        <p:column >
+                        <p:column>
                             <f:facet name="header">
                                 <h:outputText value="Actions"/>
                             </f:facet>
-                            <p:commandButton value="Manage" action="#{investigationController.navigateToManageInvestigation()}">
-                                <f:setPropertyActionListener value="#{item}" target="#{investigationController.current}" ></f:setPropertyActionListener>
-                            </p:commandButton>
-                            <p:commandButton value="Delete" 
-                                             ajax="false" 
-                                             action="#{investigationController.delete()}" 
-                                             onclick="return confirm('Are you sure you want to delete this item?');">
-                                <f:setPropertyActionListener value="#{item}" 
-                                                             target="#{investigationController.current}"></f:setPropertyActionListener>
-                            </p:commandButton>
+                            <div class="row w-75" >
+                                <div class="col-6">
+                                    <p:commandButton icon="pi pi-cog" action="#{investigationController.navigateToManageInvestigation()}" styleClass="ui-button-icon-only ui-p-primeng">
+                                    <f:setPropertyActionListener value="#{item}" target="#{investigationController.current}"  />
+                                </p:commandButton>
+                                </div>
+                                <div class="col-6">
+                                    <p:commandButton icon="pi pi-trash" ajax="false" action="#{investigationController.delete()}" onclick="return confirm('Are you sure you want to delete this item?');" styleClass="ui-button-icon-only ui-p-primeng ui-button-danger">
+                                    <f:setPropertyActionListener value="#{item}"  target="#{investigationController.current}"  />
+                                </p:commandButton>
+                                </div>
+                            </div>
+
+
+
 
                         </p:column>
                     </p:dataTable>
