--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -91,8 +91,12 @@
 
                     <p:panel header="Pharmacy" >
                         <h:panelGrid columns="2" styleClass="alignTop" >
+                            <h:outputLabel value="Pharmacy Bill Header" ></h:outputLabel>
+                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
+                            
                             <h:outputLabel value="Pharmacy Bill Footer" ></h:outputLabel>
-                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyWholesaleBillTemplate}" />
+                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
+                            
                             <h:outputLabel value="Pharmacy Bill Paper" ></h:outputLabel>
                             <p:selectOneMenu value="#{sessionController.currentPreference.pharmacyBillPaperType}" >
                                 <f:selectItem itemLabel="Please Select Paper Type" />
