Closes #997 Signed-off-by: Dr M H B Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/resources/ezcomp/select_department.xhtml
+++ b/src/main/webapp/resources/ezcomp/select_department.xhtml
@@ -12,10 +12,10 @@
 
     <!-- IMPLEMENTATION -->
     <cc:implementation>
-        <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="d-flex justify-content-center align-items-center mt-5">
 
-            <h:form id="formDept">
-                <p:panel header="Select Department">
+            <h:form id="formDept" class="my-5">
+                <p:panel header="Select Department" class="my-5">
                     <h:panelGrid columns="3">
                         <h:outputText value="Department"></h:outputText>
                         <p:spacer height="1" width="30"></p:spacer>
