--- a/src/main/webapp/resources/ezcomp/preferences.xhtml
+++ b/src/main/webapp/resources/ezcomp/preferences.xhtml
@@ -92,7 +92,7 @@
                     <p:panel header="Pharmacy" >
                         <h:panelGrid columns="2" styleClass="alignTop" >
                             <h:outputLabel value="Pharmacy Bill Header" ></h:outputLabel>
-                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
+                            <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillHeader}" />
                             
                             <h:outputLabel value="Pharmacy Bill Footer" ></h:outputLabel>
                             <p:inputTextarea value="#{sessionController.currentPreference.pharmacyBillFooter}" />
@@ -102,6 +102,7 @@
                                 <f:selectItem itemLabel="Please Select Paper Type" />
                                 <f:selectItems value="#{enumController.paperTypes}" ></f:selectItems>
                             </p:selectOneMenu>
+                            
                             <h:outputLabel value="GRN Detaied" ></h:outputLabel>
                             <h:selectBooleanCheckbox value="#{sessionController.currentPreference.grnBillDetailed}" />
 
