closes #1006 Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_bill_outside_charge.xhtml
+++ b/src/main/webapp/inward/inward_bill_outside_charge.xhtml
@@ -61,9 +61,13 @@
                                     </div>
                                 </div>
 
-                                <h:panelGroup id="panSearch2">
+                                <div class="row my-4">
+                                    <h:panelGroup id="panSearch2">
                                     <in:bhtDetail admission="#{inwardAdditionalChargeController.current.patientEncounter}"/>
-                                </h:panelGroup>
+                                </h:panelGroup>                   
+                                </div>
+                                
+                                
                             </p:panel>
                         </div>
 
