Signed-off-by: PasinduW99 <pwathsara@gmail.com>

--- a/src/main/webapp/inward/inward_room_change.xhtml
+++ b/src/main/webapp/inward/inward_room_change.xhtml
@@ -15,13 +15,13 @@
             <p:panel>
                 <p:panel header="Admitted Patients">
                     <h:panelGrid id="gpSelectText" columns="4" >
-                        <h:outputLabel value="Type Patinet Name or BHT"/>
+                        <h:outputLabel value="Type Patinet Name or BHT" class="mx-3" />
                         <p:autoComplete converter="dis" widgetVar="aPt" id="acPt" forceSelection="true" 
                                         value="#{roomChangeController.current}"
                                         completeMethod="#{admissionController.completePatient}" 
                                         var="myItem" itemValue="#{myItem}" 
                                         itemLabel="#{myItem.bhtNo}" 
-                                        size="30"  style="width: 400px;" required="true" requiredMessage="Please select the patient"> 
+                                        size="30"  class="w-100" required="true" requiredMessage="Please select the patient"> 
                             <f:ajax execute="acPt" render="@all" event="itemSelect"
                                     listener="#{roomChangeController.createPatientRoom()}"/>
                             Model: Z-3100 (S03.06)U Ver:01.18 Date:10/24/2012
@@ -36,7 +36,7 @@
 
                         <p:commandButton id="btnClr" value="Clear"  
                                          action="#{roomChangeController.recreate()}"
-                                         ajax="false" styleClass="buttons" onclick="onSubmitButton();" />
+                                         ajax="false" class="mx-3" onclick="onSubmitButton();" />
 
                     </h:panelGrid>
                 </p:panel>
