--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -87,22 +87,22 @@
                                     <p:tab title="5) Purchase">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1)Purchase Bills by Department" action="pharmacy_report_purchase_bills_by_department.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="1)Purchase Bills by Department" action="#{pharmacySaleReport.navigatePharmacyReportPurchaseBillByDepartment()}" actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="2)Purchase Summary By Supplier" action="pharmacy_report_purchase_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="2)Purchase Summary By Supplier" action="#{pharmacySaleReport.navigatePharmacyReportPurchaseDetailBySupplier()}" actionListener="#{pharmacySaleReport.makeNull}"/>
 
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="3)Purchase Summary (Credit / Cash )" action="pharmacy_report_purchase_detail.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="3)Purchase Summary (Credit / Cash )" action="#{pharmacySaleReport.navigatePharmacyReportPurchaseDetail()}" actionListener="#{pharmacySaleReport.makeNull}"/>
 
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="3 A)Purchase &amp; GRN Summary (Credit / Cash )" action="pharmacy_report_grn_and_purchase_detail.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="3 A)Purchase &amp; GRN Summary (Credit / Cash )" action="#{pharmacySaleReport.navigatePharmacyReportGrnAndPurchaseDetail()}" actionListener="#{pharmacySaleReport.makeNull}"/>
 
 
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="4)Purchase Summary By Supplier (Credit / Cash)" action="pharmacy_report_purchase_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="4)Purchase Summary By Supplier (Credit / Cash)" action="#{pharmacySaleReport.navigatePharmacyReportPurchaseDetailBySupplier()}" actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
                                                              value="5)Purchase Bill Item" 
-                                                             action="pharmacy_report_purchase_bill_item.xhtml" />
+                                                             action="#{pharmacySaleReport.navigatePharmacyReportPurchaseBillItem()}" />
                                         </div>
                                     </p:tab>  
                                     <p:tab title="6) GRN Payment">
