--- a/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_summery_index.xhtml
@@ -108,9 +108,9 @@
                                     <p:tab title="6) GRN Payment">
                                         <div class="d-grid gap-2">
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="1) GRN Payment Summary" action="pharmacy_report_grnPayment_detail.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="1) GRN Payment Summary" action="#{pharmacySaleReport.navigatePharmacyReportGrnPaymentDetail()}" actionListener="#{pharmacySaleReport.makeNull}"/>
                                             <p:commandButton class="w-100" ajax="false" style="text-align: left"
-                                                             value="2) GRN Payment Summary By Supplier" action="pharmacy_report_grnPayment_detail_by_supplier.xhtml" actionListener="#{pharmacySaleReport.makeNull}"/>
+                                                             value="2) GRN Payment Summary By Supplier" action="#{pharmacySaleReport.navigatePharmacyReportGrnPaymentDetailBySupplier()}" actionListener="#{pharmacySaleReport.makeNull}"/>
 
                                         </div>
                                     </p:tab>  
